fixed text wrap for comments

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -460,3 +460,8 @@ span.seemore {
   max-width:675px;
   word-wrap:break-word; 
 }
+
+.wrapTextComment {
+  max-width:630px;
+  word-wrap:break-word; 
+}
